Fix code overflow

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -36,7 +36,7 @@ a {
 	pre {
 		font: 12px/1.2 "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
 		padding: 8px 6px;
-		overflow-x: scroll;
+		overflow-x: auto;
 	}
 }
 
